--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -3,4 +3,8 @@ spring:
     url: jdbc:h2:mem:test
   liquibase:
     contexts: dev
-    change-log: classpath:db/changelog/master.xml
+    change-log: db/changelog/master.xml
+  jpa:
+    show-sql: true
+    hibernate:
+      ddl-auto: validate
