--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,5 +1,15 @@
 spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/cineflix
+    username: root
+    password: Admin2023!
   jpa:
     hibernate:
-      ddl-auto: validate
+      ddl-auto: none
+  liquibase:
+    change-log: classpath:db/changelog/master.xml
+    contexts: prod
+  h2:
+    console:
+      enabled: false
 
