--- a/config.properties
+++ b/config.properties
@@ -1,1 +1,5 @@
 rapid_api_key=a036483fe6mshaed22ea9f1c82e1p101240jsn943f47197fbe
+spring.datasource.url=${jdbc:mysql://localhost:3306/cineflix}
+spring.datasource.username=${root}
+spring.datasource.password=${Admin2023!}
+
